--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
     />
 
     <title>Loan Calculator</title>
+    <style>
+      #result,
+      #loading {
+        display: none;
+      }
+    </style>
   </head>
 
   <body class="bg-dark">
@@ -66,9 +72,9 @@
                 />
               </div>
             </form>
-            <!-- <div id="loading">
+            <div id="loading">
               <img src="img/loading.gif" alt="" />
-            </div> -->
+            </div>
             <div id="result" class="pt-4">
               <h5>Results</h5>
               <div class="form-group">
